tests/negative/gold/conflicting2_test.gold
tests/negative/conflicting2_test.toit:7:1: error: Redefinition of 'foo' as global
foo := 2
^~~
tests/negative/conflicting2_test.toit:5:7: note: First definition of 'foo'
class foo:
      ^~~
Compilation failed.
